# shortcog

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  SPEC.md
.githooks/: pre-commit
.github/workflows/: ci.yml  python-wheels.yml  release.yml
bindings/python/: README.md  hatch_build.py  pyproject.toml
bindings/python/shortcog/: __init__.py  _ffi.py  _read.py  _repr.py  _spec.py
core/: CMakeLists.txt  README.md
core/include/shortcog/: shortcog.h  shortcog.hpp  thread_pool.hpp
core/src/: builder.cpp  capi.cpp  driver.cpp  header.cpp  image.cpp  imagecube.cpp  parser.cpp  pattern.cpp  plan.cpp  predictor.cpp  read.cpp  reader.cpp
core/tests/: CMakeLists.txt  sha256.hpp  test_fixtures.cpp  test_layout.cpp  test_parser.cpp  test_threading.cpp
core/tests/fixtures/: make_fixtures.py
docs/: SPEC.md
