[build-system]
requires      = ["hatchling>=1.25"]
build-backend = "hatchling.build"


[project]
name            = "shortcog"
dynamic         = ["version"]
description     = "A COG profile for AI training data."
readme          = "README.md"
license         = { text = "MIT" }
requires-python = ">=3.12"

authors = [
    { name = "Cesar Aybar",     email = "cesar@asterisk.coop" },
]

dependencies = [
    "numpy>=1.24",
    "cffi>=1.17",
    # Provides the bundled libgdal our native lib links against. The minor
    # must match the GDAL we build against, so cap below the next major.
    "rasterio>=1.5,<2",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Typing :: Typed",
]

[project.optional-dependencies]
test = [
    "pytest>=7",
]

[project.urls]
Homepage   = "https://github.com/asterisk-coop/shortcog"
Repository = "https://github.com/asterisk-coop/shortcog"
Issues     = "https://github.com/asterisk-coop/shortcog/issues"


[tool.hatch.version]
path    = "../../VERSION"
pattern = "(?P<version>\\S+)"

[tool.hatch.build.targets.wheel]
packages  = ["shortcog"]
artifacts = [
    "shortcog/_lib/*.so",
    "shortcog/_lib/*.so.*",
    "shortcog/_lib/*.dylib",
    "shortcog/_lib/*.dll",
]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.sdist]
include = [
    "shortcog/**",
    "tests/**",
    "hatch_build.py",
    "README.md",
]
exclude = [
    "shortcog/_lib/*.so",
    "shortcog/_lib/*.so.*",
    "shortcog/_lib/*.dylib",
    "shortcog/_lib/*.dll",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-ra --strict-markers"

[tool.ruff]
line-length    = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "NPY"]